main part start

--- a/css/index.css
+++ b/css/index.css
@@ -60,3 +60,7 @@ div.search {padding: 19px 0;}
     text-decoration: none;
     color: #4a5a6a;
 }
+.infocards{
+    height: 240px;
+    width: 100%;
+}
