--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,9 @@ body {
     font-weight: 500;
     font-family: "Microsoft YaHei","宋体","Segoe UI", "Lucida Grande", Helvetica, Arial,sans-serif, FreeSans, Arimo;
 }
-
+img{
+    object-fit: cover;
+}
 div.search {padding: 19px 0;}
 
 .mainContainer {
@@ -68,15 +70,35 @@ div.search {padding: 19px 0;}
     margin-top: 15px;
     margin-left: 15px;
 }
+.repo-title-link{
+    font-size: 24px;
+    color: #3a4a5a;
+}
 .intro-container{
     margin-left: 15px;
     margin-top: 15px;
     height: 50%;
+    display: flex;
+}
+.intro{
+    margin-bottom: 5px!important;
+}
+.intro-text{
+    width: 50%;
+    margin-right: 0;
+}
+.intro-img{
+    width: 50%;
+    padding: 15px;
+    background: url("https://play-lh.googleusercontent.com/iO4zkUuieCTCVsbQWnuCjxkVUxc3_45mhdED_HVHXAXFpR13xB5gwr6qPO64TQSDI7U=s360-rw") center center;
+    background-size: 76% auto;
+    background-clip: content-box;
+    border-radius: 20px;
 }
 .repo-tags{
     margin-left: 15px;
     margin-top: 10px;
 }
 .repo-tags > *{
-    margin-right: 20px;
+    margin-right: 30px;
 }
