--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,9 @@
 * {
     box-sizing: border-box;
 }
-
+a{
+    color: #3a4a5a;
+}
 body {
     margin: 0;
     padding: 0;
@@ -49,7 +51,7 @@ div.search {padding: 19px 0;}
     align-items: center;
     display: flex;
     font-size: 15px;
-    margin: 0 22px;
+    padding: 0 22px;
 }
 .CateItems a:hover{
     color: #fc802a;
@@ -57,7 +59,9 @@ div.search {padding: 19px 0;}
 .CateItems{
     display: flex;
 }
-
+.proj{
+    background: #eee;
+}
 .category{
     text-decoration: none;
     color: #4a5a6a;
@@ -110,4 +114,23 @@ div.search {padding: 19px 0;}
 }
 .house-img{
 background: url(../img/login_bg.png);
+}
+.side-card{
+    height: auto;
+    width: 100%;
+}
+.link{
+    margin-top: 30px;
+    padding-bottom: 10px;
+    font-size: 16px;
+    border-bottom: 1px dashed #3a4a5a;
+}
+.uni-logo{
+    width: 80%;
+    height: 80%;
+}
+.my-handsome-face{
+    width: 40%;
+    height: 40%;
+    margin-right: 10px;
 }
